--- a/views/admin/hostelites-list.ejs
+++ b/views/admin/hostelites-list.ejs
@@ -19,124 +19,109 @@
         <div class="layout-px-spacing">
 
             <div class="row layout-top-spacing">
-                <% if (success !='' ){ %>
-                    <div class="alert alert-light-success border-0 mb-4" role="alert"> <button type="button"
-                            class="close" data-dismiss="alert" aria-label="Close"> <svg
-                                xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
-                                fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
-                                stroke-linejoin="round" class="feather feather-x close" data-dismiss="alert">
-                                <line x1="18" y1="6" x2="6" y2="18"></line>
-                                <line x1="6" y1="6" x2="18" y2="18"></line>
-                            </svg></button> <strong>Success!</strong>
-                        <%= success %>
-                    </div>
-                    <% } %>
+                <%- include('../partials/flash/flash.ejs') %>
 
-
-
-
-                        <div class="col-xl-12 col-lg-12 col-sm-12  layout-spacing">
-                            <div class="widget-content widget-content-area br-6">
-                                <table id="html5-extension" class="table table-hover non-hover" style="width:100%">
-                                    <% if (hostelliteList !=0){ %>
-                                        <thead>
-                                            <tr>
-                                                <th>Name</th>
-                                                <th>Father Name</th>
-                                                <th>Hostel #</th>
-                                                <th>Room #</th>
-                                                <th class="dt-no-sorting">Action</th>
-                                            </tr>
-                                        </thead>
-                                        <tbody>
-                                            <% for (hostellite of hostelliteList){ %>
-                                                <tr id="<%= hostellite.username %>">
-                                                    <td><a href="/dormitory/student/<%= hostellite.username  %> ">
-                                                            <div class="d-flex">
-                                                                <div class="usr-img-frame mr-2 rounded-circle">
-                                                                    <% if (hostellite.profileImage){ %>
+                    <div class="col-xl-12 col-lg-12 col-sm-12  layout-spacing">
+                        <div class="widget-content widget-content-area br-6">
+                            <table id="html5-extension" class="table table-hover non-hover" style="width:100%">
+                                <% if (hostelliteList !=0){ %>
+                                    <thead>
+                                        <tr>
+                                            <th>Name</th>
+                                            <th>Father Name</th>
+                                            <th>Hostel #</th>
+                                            <th>Room #</th>
+                                            <th class="dt-no-sorting">Action</th>
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+                                        <% for (hostellite of hostelliteList){ %>
+                                            <tr id="<%= hostellite.username %>">
+                                                <td><a href="/dormitory/student/<%= hostellite.username  %> ">
+                                                        <div class="d-flex">
+                                                            <div class="usr-img-frame mr-2 rounded-circle">
+                                                                <% if (hostellite.profileImage){ %>
+                                                                    <img alt="avatar" class="img-fluid rounded-circle"
+                                                                        src="/hostel-files/hostellite-profile-images/<%= hostellite.profileImage %> ">
+                                                                    <% }else{ %>
                                                                         <img alt="avatar"
                                                                             class="img-fluid rounded-circle"
-                                                                            src="/hostel-files/hostellite-profile-images/<%= hostellite.profileImage %> ">
-                                                                        <% }else{ %>
-                                                                            <img alt="avatar"
-                                                                                class="img-fluid rounded-circle"
-                                                                                src="/assets/img/boy.png">
-                                                                            <% } %>
-                                                                </div>
-                                                                <span
-                                                                    class="d-flex justify-content-center align-items-center">
-                                                                    <%= hostellite.fullName %>
-                                                                </span>
+                                                                            src="/assets/img/boy.png">
+                                                                        <% } %>
                                                             </div>
-                                                        </a></td>
-                                                    <td>
-                                                        <%= hostellite.fatherName %>
-                                                    </td>
-                                                    <td>
-                                                        <%= hostellite.hostelInfo.hostelNo %>
-                                                    </td>
-                                                    <td>
-                                                        <%= hostellite.hostelInfo.roomNo %>
-                                                    </td>
-                                                    <td>
-                                                        <div class="btn-group">
-                                                            <button type="button"
-                                                                class="btn bg-white shadow-none btn-sm dropdown-toggle dropdown-toggle-split"
-                                                                id="dropdownMenuReference1" data-toggle="dropdown"
-                                                                aria-haspopup="true" aria-expanded="false"
-                                                                data-reference="parent">
-                                                                <svg xmlns="" width="24" height="24" viewBox="0 0 24 24"
-                                                                    fill="none" stroke="currentColor" stroke-width="2"
-                                                                    stroke-linecap="round" stroke-linejoin="round"
-                                                                    class="feather feather-more-horizontal">
-                                                                    <circle cx="12" cy="12" r="1"></circle>
-                                                                    <circle cx="19" cy="12" r="1"></circle>
-                                                                    <circle cx="5" cy="12" r="1"></circle>
-                                                                </svg>
-                                                            </button>
-                                                            <div class="dropdown-menu"
-                                                                aria-labelledby="dropdownMenuReference1">
-                                                                <a class="dropdown-item"
-                                                                    href="/dormitory/student/<%= hostellite.username %>/edit">Edit</a>
-                                                                <a data-username="<%= hostellite.username %>"
-                                                                    class="dropdown-item mr-2  warning confirm delete"
-                                                                    href="#" id="">Delete</a>
-                                                            </div>
+                                                            <span
+                                                                class="d-flex justify-content-center align-items-center">
+                                                                <%= hostellite.fullName %>
+                                                            </span>
                                                         </div>
-                                                    </td>
-                                                </tr>
-                                                <% } %>
-                                                    <% }else{ %>
-                                                        <div class="alert alert-gradient h-100 pt-5 pb-5 d-flex flex-wrap flex-column justify-content-center align-items-center"
-                                                            role="alert">
-                                                            <h1 class="text-white mb-4"><strong>Hello!</strong></h1>
-                                                            <h2 class="text-white"> No Registrations Yet</h2>
-                                                            <h6 class="text-white"><a href="/post-face"
-                                                                    class="badge outline-badge-secondary bg-dark p-2">Register</a>
-                                                                a
-                                                                Student
-                                                                to get
-                                                                Started
-                                                            </h6>
+                                                    </a></td>
+                                                <td>
+                                                    <%= hostellite.fatherName %>
+                                                </td>
+                                                <td>
+                                                    <%= hostellite.hostelInfo.hostelNo %>
+                                                </td>
+                                                <td>
+                                                    <%= hostellite.hostelInfo.roomNo %>
+                                                </td>
+                                                <td>
+                                                    <div class="btn-group">
+                                                        <button type="button"
+                                                            class="btn bg-white shadow-none btn-sm dropdown-toggle dropdown-toggle-split"
+                                                            id="dropdownMenuReference1" data-toggle="dropdown"
+                                                            aria-haspopup="true" aria-expanded="false"
+                                                            data-reference="parent">
+                                                            <svg xmlns="" width="24" height="24" viewBox="0 0 24 24"
+                                                                fill="none" stroke="currentColor" stroke-width="2"
+                                                                stroke-linecap="round" stroke-linejoin="round"
+                                                                class="feather feather-more-horizontal">
+                                                                <circle cx="12" cy="12" r="1"></circle>
+                                                                <circle cx="19" cy="12" r="1"></circle>
+                                                                <circle cx="5" cy="12" r="1"></circle>
+                                                            </svg>
+                                                        </button>
+                                                        <div class="dropdown-menu"
+                                                            aria-labelledby="dropdownMenuReference1">
+                                                            <a class="dropdown-item"
+                                                                href="/dormitory/student/<%= hostellite.username %>/edit">Edit</a>
+                                                            <a data-username="<%= hostellite.username %>"
+                                                                class="dropdown-item mr-2  warning confirm delete"
+                                                                href="#" id="">Delete</a>
                                                         </div>
+                                                    </div>
+                                                </td>
+                                            </tr>
+                                            <% } %>
+                                                <% }else{ %>
+                                                    <div class="alert alert-gradient h-100 pt-5 pb-5 d-flex flex-wrap flex-column justify-content-center align-items-center"
+                                                        role="alert">
+                                                        <h1 class="text-white mb-4"><strong>Hello!</strong></h1>
+                                                        <h2 class="text-white"> No Registrations Yet</h2>
+                                                        <h6 class="text-white"><a href="/post-face"
+                                                                class="badge outline-badge-secondary bg-dark p-2">Register</a>
+                                                            a
+                                                            Student
+                                                            to get
+                                                            Started
+                                                        </h6>
+                                                    </div>
 
 
-                            </div>
-                            <% } %>
-                                </tbody>
-                                </table>
                         </div>
-                        <div class="d-flex justify-content-end">
-                            <a href="/post-face" class="badge outline-badge-secondary p-4 mt-2">
-                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
-                                    fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
-                                    stroke-linejoin="round" class="feather feather-plus-square mr-2">
-                                    <rect x="3" y="3" width="18" height="18" rx="2" ry="2"></rect>
-                                    <line x1="12" y1="8" x2="12" y2="16"></line>
-                                    <line x1="8" y1="12" x2="16" y2="12"></line>
-                                </svg>Add Hostellite </a>
-                        </div>
+                        <% } %>
+                            </tbody>
+                            </table>
+                    </div>
+                    <div class="d-flex justify-content-end">
+                        <a href="/post-face" class="badge outline-badge-secondary p-4 mt-2">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
+                                fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+                                stroke-linejoin="round" class="feather feather-plus-square mr-2">
+                                <rect x="3" y="3" width="18" height="18" rx="2" ry="2"></rect>
+                                <line x1="12" y1="8" x2="12" y2="16"></line>
+                                <line x1="8" y1="12" x2="16" y2="12"></line>
+                            </svg>Add Hostellite </a>
+                    </div>
             </div>
         </div>
     </div>
