--- a/views/partials/flash/flash.ejs
+++ b/views/partials/flash/flash.ejs
@@ -8,7 +8,7 @@
                 stroke-linejoin="round" class="feather feather-x close" data-dismiss="alert">
                 <line x1="18" y1="6" x2="6" y2="18"></line>
                 <line x1="6" y1="6" x2="18" y2="18"></line>
-            </svg></button> <strong>Success!</strong>
+            </svg></button>
         <%= success %>
     </div>
 
