--- a/views/student/pass-request.ejs
+++ b/views/student/pass-request.ejs
@@ -15,45 +15,57 @@
 
                         <div class="user-profile layout-spacing">
                             <div class="widget-content widget-content-area">
-                                <form method="post" class="needs-validation" novalidate
-                                    action="/dormitory/student/post-pass-request">
-                                    <div class="input-group mb-4">
-                                        <div class="input-group-prepend">
-                                            <span class="input-group-text">Reason of pass</span>
+                                <%if (new Date().getHours() <=22){ %>
+
+                                    <form method="post" class="needs-validation" novalidate
+                                        action="/dormitory/student/post-pass-request">
+                                        <div class="input-group mb-4">
+                                            <div class="input-group-prepend">
+                                                <span class="input-group-text">Reason of pass</span>
+                                            </div>
+                                            <textarea name="passReason" class="form-control" aria-label="With textarea"
+                                                id="passReason" required></textarea>
+                                            <div class="invalid-feedback">
+                                                Please provide reason of pass.
+                                            </div>
                                         </div>
-                                        <textarea name="passReason" class="form-control" aria-label="With textarea"
-                                            id="passReason" required></textarea>
-                                        <div class="invalid-feedback">
-                                            Please provide reason of pass.
-                                        </div>
-                                    </div>
-                                    <fieldset class="form-group mb-3">
-                                        <div class="d-flex">
-                                            <div class="n-chk">
-                                                <label class="new-control new-radio radio-dark">
-                                                    <input type="radio" class="new-control-input" value="night"
-                                                        name="passType" checked>
-                                                    <span class="new-control-indicator"></span>Night pass
-                                                </label>
+                                        <fieldset class="form-group mb-3">
+                                            <div class="d-flex">
+                                                <%if (new Date().getHours() <=22){ %>
+                                                    <div class="n-chk">
+                                                        <label class="new-control new-radio radio-dark">
+                                                            <input type="radio" class="new-control-input" value="night"
+                                                                name="passType" required checked>
+                                                            <span class="new-control-indicator"></span>Night pass
+                                                        </label>
+                                                    </div>
+                                                    <% } %>
+
+                                                        <%if (new Date().getHours() <=14){ %>
+
+                                                            <div class="n-chk">
+                                                                <label class="new-control new-radio radio-primary">
+                                                                    <input type="radio" class="new-control-input"
+                                                                        value="day" name="passType" required>
+                                                                    <span class="new-control-indicator"></span>Day pass
+                                                                </label>
+                                                            </div>
+                                                            <% } %>
+
+
                                             </div>
 
-                                            <div class="n-chk">
-                                                <label class="new-control new-radio radio-primary">
-                                                    <input type="radio" class="new-control-input" value="day"
-                                                        name="passType">
-                                                    <span class="new-control-indicator"></span>Day pass
-                                                </label>
-                                            </div>
-
+                                        </fieldset>
+                                        <div class="d-flex justify-content-end">
+                                            <button class="btn btn-primary mt-3" type="submit">Submit Request</button>
 
                                         </div>
+                                    </form>
 
-                                    </fieldset>
-                                    <div class="d-flex justify-content-end">
-                                        <button class="btn btn-primary mt-3" type="submit">Submit Request</button>
+                                    <% }else{ %>
+                                        <h1>Your cannot Send Pass Request after 10:00 pm</h1>
 
-                                    </div>
-                                </form>
+                                        <% } %>
                             </div>
                         </div>
 
