--- a/views/admin/hostelites-list.ejs
+++ b/views/admin/hostelites-list.ejs
@@ -113,7 +113,7 @@
                             </table>
                     </div>
                     <div class="d-flex justify-content-end">
-                        <a href="/post-face" class="badge outline-badge-secondary p-4 mt-2">
+                        <a href="/dormitory/admin/add-hostellite" class="badge outline-badge-secondary p-4 mt-2">
                             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
                                 fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
                                 stroke-linejoin="round" class="feather feather-plus-square mr-2">
